Added Joe Sandbox as one of the supported sandboxing solutions

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <li><strong>correlation</strong>: automatically creating relations between malwares, events and attributes</li>
         <li><strong>security by design</strong>: regularly pentested, GPG encryption and signing of the mails, ...</li>
         <li><strong>export</strong>: generating IDS, STIX, OpenIOC, plain text, xml output to integrate with other systems (IDS, SIEM, custom tools, ...)</li>
-        <li><strong>import</strong>: bulk-import, batch-import, import from OpenIOC, GFI sandbox, ThreatConnect CSV, ...</li>
+        <li><strong>import</strong>: bulk-import, batch-import, import from OpenIOC, Joe Sandbox, GFI SandBox, ThreatConnect CSV, ...</li>
         <li><strong>data-sharing</strong>: automatically exchange and synchronization with other parties and trust-groups using MISP</li>
         <li><strong>STIX support</strong>: export data in the STIX format (XML and json)</li>
         <li><strong>automation</strong>: REST API, PyMISP, ZeroMQ</li>
@@ -218,7 +218,7 @@
         <h3 class="card-heading simple">Sharing with machines</h3>
         <div class="card-body">
           <p>By generating <b>Snort/Suricata IDS rules, STIX, OpenIOC</b>, text or csv exports MISP allows you to <b>automatically</b> import data in your detection systems resulting in <b>better and faster detection</b> of intrusions.</p>
-          <p>Importing data can also be done in various ways: <b>free-text import, OpenIOC, batch import</b>, or using the preconfigured or <b>custom templates</b>.</p>
+          <p>Importing data can also be done in various ways: <b>free-text import, OpenIOC, batch import</b>, sandbox result import (Joe Sandbox and GFI SandBox) or using the preconfigured or <b>custom templates</b>.</p>
           <p>If you run MISP internally, data can also be uploaded and downloaded automagically <b>from and to externally hosted MISP instances</b>. Thanks to this automation and the effort of others you are now in possession of valuable indicators of compromise with no additional work. </p>
         </div>
 
