added feathub link

--- a/index.html
+++ b/index.html
@@ -385,6 +385,7 @@
             <li>Documentation: <a href="https://github.com/MISP/misp-book">The MISP book</a> (<a href="https://www.circl.lu/doc/misp/book.pdf">in PDF format</a>).</li>
             <li>Source code: <a href="https://github.com/MISP/">https://github.com/MISP/</a></li>
             <li>Issue tracking: <a href="https://github.com/MISP/MISP/issues">https://github.com/MISP/MISP/issues</a></li>
+            <li>Feature requests: <a href="http://feathub.com/MISP/MISP">http://feathub.com/MISP/MISP</a></li>
             </ul>
           </div>
           <h3 class="card-heading simple">Commercial Support</h3>
