--- a/index.html
+++ b/index.html
@@ -196,14 +196,14 @@
                 <li> Built-in <strong>sharing functionality</strong> to ease data sharing using different model of distributions. MISP can synchronize automatically events and attributes among different MISP. Advanced filtering functionalities can be used to meet each organization sharing policy including a <strong>flexible sharing group</strong> capacity and an attribute level distribution mechanisms.
                 <li> An <strong>intuitive user-interface</strong> for end-users to create, update and collaborate on events and attributes/indicators. A <strong>graphical interface</strong> to navigate seamlessly between events and their correlations.
                 <li> <strong>storing data</strong> in a structured format (allowing automated use of the database for various purposes) with an extensive support of cyber security indicators along fraud indicators as in the financial sector.
-                <li> <strong>export<strong>: generating IDS, OpenIOC, plain text, CSV, MISP XML or JSON output to integrate with other systems (network IDS, host IDS, custom tools)
-                <li> <strong>import<strong>: bulk-import, batch-import, import from OpenIOC, GFI sandbox, ThreatConnect CSV.
+                <li> <strong>export</strong>: generating IDS, OpenIOC, plain text, CSV, MISP XML or JSON output to integrate with other systems (network IDS, host IDS, custom tools)
+                <li> <strong>import</strong>: bulk-import, batch-import, import from OpenIOC, GFI sandbox, ThreatConnect CSV.
                 <li> Flexible <strong>free text import</strong> tool to ease the integration of unstructured reports into MISP.
                 <li> A gentle system to <strong>collaborate</strong> on events and attributes allowing MISP users to propose changes or updates to attributes/indicators.
                 <li> <strong>data-sharing</strong>: automatically exchange and synchronization with other parties and trust-groups using MISP.
                 <li> <strong>delegating of sharing</strong>: allows a simple pseudo-anonymous mechanism to delegate publication of event/indicators to another organization.
                 <li> Flexible <strong>API</strong> to integrate MISP with your own solutions. MISP is bundled with <a href="https://github.com/MISP/PyMISP">PyMISP</a> which is a flexible Python Library to fetch, add or update events attributes, handle malware samples or search for attributes.
-                <li> <strong>Adjustable taxonomy<strong> to classify and tag events following your own classification schemes or <a href="https://github.com/MISP/misp-taxonomies">existing taxonomies</a>. The taxonomy can be local to your MISP but also shareable among MISP instances.
+                <li> <strong>Adjustable taxonomy</strong> to classify and tag events following your own classification schemes or <a href="https://github.com/MISP/misp-taxonomies">existing taxonomies</a>. The taxonomy can be local to your MISP but also shareable among MISP instances.
                 <li> <strong>STIX support</strong>: export data in the STIX format (XML and JSON).
         </ul>
         </div>
